feat: function call changes