@@ -16,18 +16,10 @@
 
 package org.springframework.ai.moonshot.chat;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import reactor.core.publisher.Flux;
-
 import org.springframework.ai.chat.messages.AssistantMessage;
 import org.springframework.ai.chat.messages.Message;
 import org.springframework.ai.chat.messages.UserMessage;
@@ -35,13 +27,19 @@ import org.springframework.ai.chat.model.ChatModel;
 import org.springframework.ai.chat.model.ChatResponse;
 import org.springframework.ai.chat.model.Generation;
 import org.springframework.ai.chat.prompt.Prompt;
-import org.springframework.ai.model.function.FunctionCallback;
 import org.springframework.ai.moonshot.MoonshotChatOptions;
 import org.springframework.ai.moonshot.MoonshotTestConfiguration;
 import org.springframework.ai.moonshot.api.MockWeatherService;
 import org.springframework.ai.moonshot.api.MoonshotApi;
+import org.springframework.ai.tool.function.FunctionToolCallback;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import reactor.core.publisher.Flux;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -91,8 +89,7 @@ class MoonshotChatModelFunctionCallingIT {
 
 		var promptOptions = MoonshotChatOptions.builder()
 			.model(MoonshotApi.ChatModel.MOONSHOT_V1_8K.getValue())
-			.functionCallbacks(List.of(FunctionCallback.builder()
-				.function("getCurrentWeather", new MockWeatherService())
+			.toolCallbacks(List.of(FunctionToolCallback.builder("getCurrentWeather", new MockWeatherService())
 				.description("Get the weather in location")
 				.inputType(MockWeatherService.Request.class)
 				.build()))
@@ -114,8 +111,7 @@ class MoonshotChatModelFunctionCallingIT {
 		List<Message> messages = new ArrayList<>(List.of(userMessage));
 
 		var promptOptions = MoonshotChatOptions.builder()
-			.functionCallbacks(List.of(FunctionCallback.builder()
-				.function("getCurrentWeather", new MockWeatherService())
+			.toolCallbacks(List.of(FunctionToolCallback.builder("getCurrentWeather", new MockWeatherService())
 				.description("Get the weather in location")
 				.inputType(MockWeatherService.Request.class)
 				.build()))
@@ -141,9 +137,7 @@ class MoonshotChatModelFunctionCallingIT {
 	public void toolFunctionCallWithUsage() {
 		var promptOptions = MoonshotChatOptions.builder()
 			.model(MoonshotApi.ChatModel.MOONSHOT_V1_8K.getValue())
-			.tools(Arrays.asList(FUNCTION_TOOL))
-			.functionCallbacks(List.of(FunctionCallback.builder()
-				.function("getCurrentWeather", new MockWeatherService())
+			.toolCallbacks(List.of(FunctionToolCallback.builder("getCurrentWeather", new MockWeatherService())
 				.description("Get the weather in location. Return temperature in 36°F or 36°C format.")
 				.inputType(MockWeatherService.Request.class)
 				.build()))
@@ -155,17 +149,15 @@ class MoonshotChatModelFunctionCallingIT {
 		assertThat(chatResponse).isNotNull();
 		assertThat(chatResponse.getResult().getOutput());
 		assertThat(chatResponse.getResult().getOutput().getText()).contains("San Francisco");
-		assertThat(chatResponse.getResult().getOutput().getText()).contains("30.0");
-		assertThat(chatResponse.getMetadata().getUsage().getTotalTokens()).isLessThan(450).isGreaterThan(280);
+		assertThat(chatResponse.getResult().getOutput().getText()).contains("30");
+		assertThat(chatResponse.getMetadata().getUsage().getTotalTokens()).isLessThan(700).isGreaterThan(280);
 	}
 
 	@Test
 	public void testStreamFunctionCallUsage() {
 		var promptOptions = MoonshotChatOptions.builder()
 			.model(MoonshotApi.ChatModel.MOONSHOT_V1_8K.getValue())
-			.tools(Arrays.asList(FUNCTION_TOOL))
-			.functionCallbacks(List.of(FunctionCallback.builder()
-				.function("getCurrentWeather", new MockWeatherService())
+			.toolCallbacks(List.of(FunctionToolCallback.builder("getCurrentWeather", new MockWeatherService())
 				.description("Get the weather in location. Return temperature in 36°F or 36°C format.")
 				.inputType(MockWeatherService.Request.class)
 				.build()))
@@ -177,7 +169,7 @@ class MoonshotChatModelFunctionCallingIT {
 		assertThat(chatResponse).isNotNull();
 		assertThat(chatResponse.getMetadata()).isNotNull();
 		assertThat(chatResponse.getMetadata().getUsage()).isNotNull();
-		assertThat(chatResponse.getMetadata().getUsage().getTotalTokens()).isLessThan(450).isGreaterThan(280);
+		assertThat(chatResponse.getMetadata().getUsage().getTotalTokens()).isLessThan(700).isGreaterThan(280);
 	}
 
 }
